# Distributed-realtime-media-plateform

./: README.md  build.sh  docker-compose.yml
docker/: docker-compose.dev.yml
docs/: README.md  api.md  configuration.md  deployment.md  documentation-structure.md  error-handling.md  getting-started.md  overview.md  testing-framework.md
docs/api/: api-reference.md
docs/configuration/: configuration-guide.md
docs/deployment/: deployment-guide.md
docs/getting-started/: installation.md  quick-start.md
drmp-web/: index.html  package-lock.json  package.json
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Controls.tsx  VideoGrid.tsx
frontend/src/hooks/: use-webrtc.ts
frontend/src/screens/: Lobby.tsx  MeetingRoom.tsx
frontend/src/services/: webrtc-manager.ts
k8s/: auth.yaml  configmap.yaml  control-plane.yaml  database.yaml  gateway-deployment.yaml  gateway.yaml  hpa.yaml  ingress.yaml  media-edge-deployment.yaml  media-edge.yaml  namespace.yaml  node-exporter.yaml  recording.yaml  secret.yaml  sfu-deployment.yaml  sfu.yaml
scripts/: init-db.sql
services/auth/: Cargo.toml  Dockerfile  Dockerfile.dev
services/auth/src/: lib.rs  main.rs  tests.rs
services/control-plane/: Cargo.toml  Dockerfile  Dockerfile.dev
services/control-plane/src/: lib.rs  main.rs
services/gateway/: Cargo.toml  Dockerfile  Dockerfile.dev
services/gateway/src/: lib.rs  main.rs
services/media-edge/: Cargo.toml  Dockerfile  Dockerfile.dev
services/media-edge/src/: lib.rs  main.rs
services/recording/: Cargo.toml  Dockerfile  Dockerfile.dev
services/recording/src/: lib.rs  main.rs
services/sfu/: Cargo.toml  Dockerfile  Dockerfile.dev
shared/: Cargo.toml
shared/domain/: mod.rs
shared/media/: mod.rs
shared/security/: mod.rs
shared/utils/: mod.rs
test-extract/: Cargo.toml
test-extract/domain/: mod.rs
test-extract/security/: mod.rs
test-extract/src/: lib.rs
test-extract/utils/: mod.rs
web/: package.json
web/src/: App.vue  main.js
(+19 files in other folders)
