[package]
name = "control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-rt = "2.0"
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "postgres", "uuid", "chrono", "json"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.shared]
path = "../../shared"