[package]
name = "recording"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
bytes = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[dependencies.shared]
path = "../../shared"

[[bin]]
name = "drmp-recording"
path = "src/main.rs"